--- a/README
+++ b/README
@@ -1,16 +1,16 @@
-Location-Area-DoCoMo-iArea version 0.01
-==================================
+Location-GeoTool version 1.01
+=========================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+This module is for one who wants to handle NTT DoCoMo's
+"Open i-Area" system.
+By this module, you can create i-Area object from Geo coordinate
+or i-Area code.
+And, from i-Area object, you can get
+  > Area code
+  > Area name
+  > Prefecture name of this area
+  > Region name of this area
+  > South, west, north, east limit of this area
 
 INSTALLATION
 
@@ -23,18 +23,15 @@ To install this module type the following:
 
 DEPENDENCIES
 
-This module requires these other modules and libraries:
-
-  blah blah blah
+Carp
+Location::GeoTool
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
-
-Copyright (C) 2004 by A. U. Thor
+Copyright (C) 2004 by SpaceTag INC.,
 
 This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.8.5 or,
+it under the same terms as Perl itself, either Perl version 5.8.0 or,
 at your option, any later version of Perl 5 you may have available.
 
 
