Import of KOKOGIKO/Location-Area-DoCoMo-iArea-2.1 from CPAN.
gitpan-cpan-distribution: Location-Area-DoCoMo-iArea
gitpan-cpan-version:      2.1
gitpan-cpan-path:         KOKOGIKO/Location-Area-DoCoMo-iArea-2.1.tar.gz
gitpan-cpan-author:       KOKOGIKO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -23,3 +23,7 @@ Revision history for Perl extension SpaceTag::DoCoMo.
   - Add adjusted mode of aura data. DoCoMo's aura data contains a lot of inconsistencies,
      so add adjusted data mode.
   - Add include_area method.
+
+2.10  Sun Feb 25 12:20:00 2007 JST
+  - Data were updated by data released at Feb 20, 2007.
+    Thank you for Mr. Kunihiko Miyanaga!
