--- a/README
+++ b/README
@@ -28,7 +28,7 @@ Location::GeoTool
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2004 by SpaceTag INC.,
+Copyright (C) 2004-2007 by Kokogiko!,
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.0 or,
